# voice-bot

./: .gitignore  agent.py  pyproject.toml  sarvam_llm.py  sarvam_stt.py  tracing_langfuse.py
eval/: questions.json
scripts/: questions.json  run_llm_eval.py
